[package]
edition = "2021"
name = "trid"
version = "5.0.0"
description = "Turkish citizenship ID number type"
readme = "README.md"
homepage = "https://github.com/ssg/trid"
repository = "https://github.com/ssg/trid"
authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
license = "Apache-2.0"
keywords = ["turkish", "turkey", "id", "number"]
categories = ["parser-implementations"]

[net]
git-fetch-with-cli = true
